2006-10-08 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: added to the manual
	* doc/figures/ddd_example.png: added (neither pdflatex nor
	most browsers seem to like the .eps file)

2006-10-06 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCglue.c (tempfileandname): changed un*x tmp search paths
	to /tmp and /var/tmp acc. LSB
	* src/SDCCast.c (addCast): Fixed bug 1571231: promote in case of
	RESULT_TYPE_IFX
	* support/regression/tests/onebyte.c: added test

2006-10-05 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* src/mcs51/gen.c: emitcode for "add a,0x%02x" requires only 8 bits.

2006-10-05 Borut Razem <borut.razem AT siol.net>

	* partially fixed [ 1570701 ] peephole - not replacing code from multiline macros,
	  thanks to dfulab:
	  - sdcc.dsw: changed property eol-style to CRLF
	  - support/scripts/resource.rc: replaced references to "afxres.h" with "winres.h"

2006-10-04 Raphael Neider <rneider AT web.de>

	* device/include/pic/{pic16f84.h,pic16f84a.h},
	* device/lib/pic/libdev/{pic16f84.c,pic16f84a.c}: added PORT[AB]_bits
	  from patch #1522504, thanks to Robas Teodor

2006-10-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/link/z80/lkarea.c: essentially reverted lnksect() to #4380 which
	  fixes bug 1566015

2006-10-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/pic16/glue.c (pic16emitMaps),
	* src/pic/glue.c (pic14emitMaps): hopefully fixed bug 1568779
	* device/lib/gets.c: fixed bug 1568829,thanks Philipp Krause
	* device/lib/pic16/libc/string/memcpypgm2ram.c,
	* device/lib/pic16/libc/string/memcpyram2ram.c: fixed bug 1568836, thanks
	  Philipp Krause
	* as/mcs51/asmain.c (asmbl, newdot): fixed problems with absolute areas
	* as/link/mcs51/lkmem.c (summary2): reverted, do do count abs segments

2006-09-30 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* support/librarian/sdcclib.c: Added option -l.
	* as/link/mcs51/lkmem.c: don't use absolute segments to compute memory
	  usage totals.